--- a/package.json
+++ b/package.json
@@ -13,6 +13,13 @@
     "next": "9.4.4",
     "next-on-netlify": "^2.3.0",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-raster": "^5.0.4",
+    "styled-components": "^5.1.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.0.14",
+    "@types/react": "^16.9.41",
+    "typescript": "^3.9.6"
   }
 }
